--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,13 +1,5 @@
-##################################
-#                                #
-# Feel free to edit this file :) #
-#                                #
-##################################
-
 logo: /images/isomer-logo.svg
-
 links:
-  - title: Contact Us
-    url: /contact-us/
-  - title: Example Page
-    url: /example-page/
+  - title: About us
+    url: /permalink
+    sublinks: []
