--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,4 +2,16 @@ logo: /images/isomer-logo.svg
 links:
   - title: About us
     url: /permalink
-    sublinks: []
+    sublinks:
+      - title: Mission & Vision
+        url: /permalink
+      - title: School Song
+        url: /permalink
+      - title: General Information
+        url: /permalink
+      - title: Our Location
+        url: /permalink
+      - title: Our Service Providers
+        url: /permalink
+      - title: Our Staff
+        url: /permalink
