--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Title
 url: ""
-favicon: /images/photo6160989144705250760.jpg
+favicon: /images/favicon-isomer.ico
 colors:
   primary-color: "#6031b6"
   secondary-color: "#4372d6"
