--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -45,3 +45,10 @@ links:
         url: /permalink
       - title: Uniformed Groups
         url: /permalink
+  - title: Programme and Events
+    url: /permalink
+    sublinks:
+      - title: Programmes
+        url: /permalink
+      - title: Events
+        url: /permalink
