--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -54,4 +54,14 @@ links:
         url: /permalink
   - title: STAKEHOLDERS
     url: /permalink
-    sublinks: []
+    sublinks:
+      - title: Teacher's Portal
+        url: /permalink
+      - title: Our Alumni
+        url: /permalink
+      - title: Parents in Education
+        url: /permalink
+      - title: Parent Support Group
+        url: /permalink
+      - title: Parent Volunteer Programme
+        url: /permalink
