--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -65,3 +65,30 @@ links:
         url: /permalink
       - title: Parent Volunteer Programme
         url: /permalink
+  - title: COMMUNICATIONS
+    url: /permalink
+    sublinks:
+      - title: Rivervale in the News
+        url: /permalink
+      - title: Calendar
+        url: /permalink
+      - title: Rivervale Connects
+        url: /permalink
+      - title: Guide to using SLS
+        url: /permalink
+      - title: Guide to using Student ICON
+        url: /permalink
+      - title: Parents Gateway
+        url: /permalink
+      - title: Primary One 2022 Information
+        url: /permalink
+      - title: PSLE Scoring from 2021
+        url: /permalink
+      - title: Secondary 1 Posting from 2021
+        url: /permalink
+      - title: Consent for Photography
+        url: /permalink
+      - title: Parents Engagement
+        url: /permalink
+      - title: Subject Sharing 2022
+        url: /permalink
