--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 logo: /images/photo6160989144705250760.jpg
 links:
   - title: ABOUT US
-    url: /permalink
+    url: " Mission and Vision/permalink"
     sublinks:
       - title: Mission & Vision
         url: /permalink
