--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ links:
     url: /permalink
     sublinks:
       - title: Mission & Vision
-        url: /Mission-Vision/permalink
+        url: /Mission-Vision
       - title: School Song
         url: /permalink
       - title: General Information
