--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@ links:
       - title: Mission & Vision
         url: /Mission-Vision
       - title: School Song
-        url: /permalink
+        url: /School-Song
       - title: General Information
         url: /permalink
       - title: Our Location
