--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Title
 url: ""
-favicon: /images/favicon-isomer.ico
+favicon: /images/image.png
 colors:
   primary-color: "#b6ab31"
   secondary-color: "#4372d6"
