--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,7 +8,7 @@ links:
       - title: School Song
         url: /School-Song
       - title: General Information
-        url: /permalink
+        url: /General-Information
       - title: Our Location
         url: /permalink
       - title: Our Service Providers
