--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -2,7 +2,7 @@ collections:
   about-us:
     output: true
     order:
-      - School Rules and Regulations/.keep
+      - General Information/.keep
       - General Information.md
       - Mission&Vision.md
       - School Song.md
