--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -2,6 +2,7 @@ collections:
   about-us:
     output: true
     order:
+      - General Information/General Information.md
       - General Information/.keep
       - Mission&Vision.md
       - School Song.md
