--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,7 @@ links:
       - title: General Information
         url: /General-Information
       - title: Our Location
-        url: /permalink
+        url: /Our-Location
       - title: Our Service Providers
         url: /permalink
       - title: Our Staff
