--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -12,4 +12,5 @@ collections:
       - School Song.md
       - Our Location.md
       - Our Service Providers.md
+      - Our Staff/School Advisory Committee.md
       - Our Staff/.keep
