--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,7 +14,7 @@ links:
       - title: Our Service Providers
         url: /permalink
       - title: Our Staff
-        url: /permalink
+        url: /School-Advisory-Committee
       - title: Programmes
         url: /permalink
       - title: Events
