--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -12,6 +12,7 @@ collections:
       - School Song.md
       - Our Location.md
       - Our Service Providers.md
+      - Our Staff/Primary 5 Teachers.md
       - Our Staff/Primary 4 Teachers.md
       - Our Staff/Primary 3 Teachers.md
       - Our Staff/Primary 2 Teachers.md
