--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -12,6 +12,7 @@ collections:
       - School Song.md
       - Our Location.md
       - Our Service Providers.md
+      - Our Staff/PE ART MUSIC Teachers.md
       - Our Staff/Mother Tongue Teachers.md
       - Our Staff/Primary 6 Teachers.md
       - Our Staff/Primary 5 Teachers.md
