--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -12,6 +12,7 @@ collections:
       - School Song.md
       - Our Location.md
       - Our Service Providers.md
+      - Our Staff/Senior School Counsellor.md
       - Our Staff/School Supporting Staff.md
       - Our Staff/EAS Staff.md
       - Our Staff/Allied Educators (AED).md
