--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -2,6 +2,7 @@ collections:
   about-us:
     output: true
     order:
+      - Programmes/.keep
       - General Information/.keep
       - General Information/General Information.md
       - General Information/School Rules and Regulations.md
