--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -2,6 +2,7 @@ collections:
   about-us:
     output: true
     order:
+      - Programmes/Global Classroom Programme.md
       - Programmes/Learning for Life Programmes.md
       - Programmes/.keep
       - General Information/.keep
