--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,7 +16,7 @@ links:
       - title: Our Staff
         url: /about-us/Our-Staff/School-Advisory-Committee
       - title: Programmes
-        url: /permalink
+        url: /about-us/Learning-for-Life-Programmes
       - title: Events
         url: /permalink
   - title: CURRICULUM DEPARTMENTS
