--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -89,3 +89,8 @@ links:
         url: /permalink
       - title: Subject Sharing 2022
         url: /permalink
+  - title: Programmes
+    url: /permalink
+    sublinks:
+      - title: Submenu Title
+        url: /permalink
