--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -94,3 +94,5 @@ links:
     sublinks:
       - title: Submenu Title
         url: /permalink
+      - title: Submenu Title
+        url: /permalink
