--- a/_curriculum-departments/collection.yml
+++ b/_curriculum-departments/collection.yml
@@ -2,5 +2,6 @@ collections:
   curriculum-departments:
     output: true
     order:
+      - Science/.keep
       - Mathematics/.keep
       - English/.keep
