--- a/_curriculum-departments/collection.yml
+++ b/_curriculum-departments/collection.yml
@@ -5,6 +5,7 @@ collections:
       - English/.keep
       - English/English.md
       - English/Our School Library.md
+      - Mathematics/Approved Calculator List.md
       - Mathematics/.keep
       - Science/.keep
       - Mother Tongue/.keep
