--- a/_curriculum-departments/collection.yml
+++ b/_curriculum-departments/collection.yml
@@ -8,6 +8,7 @@ collections:
       - Mathematics/Mathematics.md
       - Mathematics/Approved Calculator List.md
       - Mathematics/.keep
+      - Science/Recycle RIGHT Towards Zero Waste.md
       - Science/E waste Recycling.md
       - Science/Rivervale Primary School Science Website.md
       - Science/Reduce, Reuse, Recycle.md
