--- a/_curriculum-departments/collection.yml
+++ b/_curriculum-departments/collection.yml
@@ -14,6 +14,7 @@ collections:
       - Science/Recycle RIGHT Towards Zero Waste.md
       - Science/E waste Recycling.md
       - Science/Reduce, Reuse, Recycle.md
+      - Mother Tongue/Chinese Language.md
       - Mother Tongue/Malay Language.md
       - Mother Tongue/Tamil Language.md
       - Mother Tongue/.keep
