--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,7 +19,7 @@ links:
     url: /permalink
     sublinks:
       - title: English
-        url: /permalink
+        url: /curriculum-departments/English
       - title: Mathematics
         url: /permalink
       - title: Science
