--- a/_curriculum-departments/collection.yml
+++ b/_curriculum-departments/collection.yml
@@ -18,6 +18,7 @@ collections:
       - Mother Tongue/Malay Language.md
       - Mother Tongue/Tamil Language.md
       - Mother Tongue/.keep
+      - ICT/Cyber Wellness.md
       - ICT/Information Technology.md
       - ICT/.keep
       - PE and CCA/.keep
