--- a/_curriculum-departments/collection.yml
+++ b/_curriculum-departments/collection.yml
@@ -21,6 +21,7 @@ collections:
       - ICT/Cyber Wellness.md
       - ICT/Information Technology.md
       - ICT/.keep
+      - PE and CCA/PE and CCA.md
       - PE and CCA/.keep
       - Aesthetics/.keep
       - Student Development Team/.keep
