--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,7 +16,7 @@ links:
       - title: Our Staff
         url: /about-us/Our-Staff/School-Advisory-Committee
   - title: CURRICULUM DEPARTMENTS
-    url: /permalink
+    url: /curriculum-departments/English
     sublinks:
       - title: English
         url: /curriculum-departments/English
