--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,7 +21,7 @@ links:
       - title: English
         url: /curriculum-departments/English
       - title: Mathematics
-        url: /permalink
+        url: /curriculum-departments/Mathematics/Mathematics
       - title: Science
         url: /permalink
       - title: Mother Tongue
