--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -23,7 +23,7 @@ links:
       - title: Mathematics
         url: /curriculum-departments/Mathematics/Mathematics
       - title: Science
-        url: /permalink
+        url: /curriculum-departments/Science/Rivervale-Primary-School-Science-Website
       - title: Mother Tongue
         url: /permalink
       - title: ICT
