--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -25,7 +25,7 @@ links:
       - title: Science
         url: /curriculum-departments/Science/Rivervale-Primary-School-Science-Website
       - title: Mother Tongue
-        url: /permalink
+        url: /curriculum-departments/Mother-Tongue/Chinese-Language
       - title: ICT
         url: /permalink
       - title: PE/CCA
