--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -27,7 +27,7 @@ links:
       - title: Mother Tongue
         url: /curriculum-departments/Mother-Tongue/Chinese-Language
       - title: ICT
-        url: /permalink
+        url: /curriculum-departments/ICT/Information-Technology
       - title: PE/CCA
         url: /permalink
       - title: Aesthetics
