--- a/_curriculum-departments/collection.yml
+++ b/_curriculum-departments/collection.yml
@@ -21,6 +21,7 @@ collections:
       - ICT/.keep
       - ICT/Information Technology.md
       - ICT/Cyber Wellness.md
+      - PE and CCA/Primary 3 SwimSafer 2 Programme.md
       - PE and CCA/Primary 5 SEP ‘Archery Tag’ Programme.md
       - PE and CCA/Primary 6 SEP ‘Kin Ball’ Programme.md
       - PE and CCA/Primary 6 SEP ‘School Fun Climb Session’ Programme.md
