--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -29,7 +29,7 @@ links:
       - title: ICT
         url: /curriculum-departments/ICT/Information-Technology
       - title: PE/CCA
-        url: /permalink
+        url: /curriculum-departments/PE-and-CCA/PE-CCA
       - title: Aesthetics
         url: /permalink
       - title: Student Development Team
