--- a/_curriculum-departments/collection.yml
+++ b/_curriculum-departments/collection.yml
@@ -30,6 +30,7 @@ collections:
       - PE and CCA/Primary 5 SEP ‘Archery Tag’ Programme.md
       - PE and CCA/Primary 6 SEP ‘Kin Ball’ Programme.md
       - PE and CCA/Primary 6 SEP ‘School Fun Climb Session’ Programme.md
+      - Aesthetics/Community Art.md
       - Aesthetics/Singapore Youth Festival.md
       - Aesthetics/Aesthetics.md
       - Aesthetics/.keep
