--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -31,7 +31,7 @@ links:
       - title: PE/CCA
         url: /curriculum-departments/PE-and-CCA/PE-CCA
       - title: Aesthetics
-        url: /permalink
+        url: /curriculum-departments/Aesthetics/Aesthetics
       - title: Student Development Team
         url: /permalink
   - title: CCA
