--- a/_curriculum-departments/collection.yml
+++ b/_curriculum-departments/collection.yml
@@ -34,5 +34,6 @@ collections:
       - Aesthetics/Aesthetics.md
       - Aesthetics/Community Art.md
       - Aesthetics/Singapore Youth Festival.md
+      - Student Development Team/Character and Citizenship Education.md
       - Student Development Team/Student Development Team.md
       - Student Development Team/.keep
