--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -33,7 +33,7 @@ links:
       - title: Aesthetics
         url: /curriculum-departments/Aesthetics/Aesthetics
       - title: Student Development Team
-        url: /permalink
+        url: /curriculum-departments/Student-Development-Team/Student-Development-Team
   - title: CCA
     url: /permalink
     sublinks:
