--- a/_ccas/collection.yml
+++ b/_ccas/collection.yml
@@ -2,6 +2,7 @@ collections:
   ccas:
     output: true
     order:
+      - Sports/Football.md
       - Sports/Hockey.md
       - Sports/Basketball.md
       - Sports/Netball.md
