--- a/_ccas/collection.yml
+++ b/_ccas/collection.yml
@@ -2,6 +2,7 @@ collections:
   ccas:
     output: true
     order:
+      - Performing Arts/Brass Band.md
       - Performing Arts/.keep
       - Sports/Badminton.md
       - Sports/Football.md
