--- a/_ccas/collection.yml
+++ b/_ccas/collection.yml
@@ -2,6 +2,7 @@ collections:
   ccas:
     output: true
     order:
+      - Performing Arts/Fusion Dance.md
       - Performing Arts/Guzheng.md
       - Performing Arts/Indian Dance.md
       - Performing Arts/Malay Dance.md
