--- a/_ccas/collection.yml
+++ b/_ccas/collection.yml
@@ -2,6 +2,7 @@ collections:
   ccas:
     output: true
     order:
+      - Performing Arts/Chinese Dance.md
       - Performing Arts/Choir.md
       - Performing Arts/Fusion Dance.md
       - Performing Arts/Guzheng.md
