--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -38,7 +38,7 @@ links:
     url: /permalink
     sublinks:
       - title: Sports
-        url: /permalink
+        url: /ccas/Sports/Badminton
       - title: Performing Arts
         url: /permalink
       - title: Clubs
