--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -40,7 +40,7 @@ links:
       - title: Sports
         url: /ccas/Sports/Badminton
       - title: Performing Arts
-        url: /permalink
+        url: /ccas/Performing-Arts/Brass-Band
       - title: Clubs
         url: /permalink
       - title: Uniformed Groups
