--- a/_curriculum-departments/collection.yml
+++ b/_curriculum-departments/collection.yml
@@ -8,6 +8,7 @@ collections:
       - Mathematics/Mathematics.md
       - Mathematics/Approved Calculator List.md
       - Mathematics/.keep
+      - Science/Science.md
       - Science/.keep
       - Science/Rivervale Primary School Science Website.md
       - Science/Science Competition 2021.md
