--- a/_ccas/collection.yml
+++ b/_ccas/collection.yml
@@ -2,6 +2,7 @@ collections:
   ccas:
     output: true
     order:
+      - Clubs/Infocomm Club.md
       - Clubs/Robotics Club.md
       - Clubs/.keep
       - Performing Arts/.keep
