--- a/_ccas/collection.yml
+++ b/_ccas/collection.yml
@@ -2,6 +2,7 @@ collections:
   ccas:
     output: true
     order:
+      - Clubs/Art Club.md
       - Clubs/Ceramics Club.md
       - Clubs/Public Speaking.md
       - Clubs/Life Skills Club.md
