--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -42,7 +42,7 @@ links:
       - title: Performing Arts
         url: /ccas/Performing-Arts/Brass-Band
       - title: Clubs
-        url: /permalink
+        url: /ccas/Clubs/Art-Club
       - title: Uniformed Groups
         url: /permalink
   - title: STAKEHOLDERS
