--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -35,7 +35,7 @@ links:
       - title: Student Development Team
         url: /curriculum-departments/Student-Development-Team/Student-Development-Team
   - title: CCA
-    url: /permalink
+    url: /ccas/Sports/Badminton
     sublinks:
       - title: Sports
         url: /ccas/Sports/Badminton
