--- a/_ccas/collection.yml
+++ b/_ccas/collection.yml
@@ -2,6 +2,7 @@ collections:
   ccas:
     output: true
     order:
+      - Uniformed Groups/Red Cross.md
       - Uniformed Groups/.keep
       - Clubs/Art Club.md
       - Clubs/Ceramics Club.md
