--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -44,7 +44,7 @@ links:
       - title: Clubs
         url: /ccas/Clubs/Art-Club
       - title: Uniformed Groups
-        url: /permalink
+        url: //ccas/Uniformed-Groups/Red-Cross
   - title: STAKEHOLDERS
     url: /permalink
     sublinks:
