--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -45,6 +45,15 @@ links:
         url: /ccas/Clubs/Art-Club
       - title: Uniformed Groups
         url: /ccas/Uniformed-Groups/Red-Cross
+  - title: PROGRAMME
+    url: /permalink
+    sublinks:
+      - title: Learning for Life Programme
+        url: /permalink
+      - title: Global Classroom Programme
+        url: /permalink
+      - title: Events
+        url: /permalink
   - title: STAKEHOLDERS
     url: /permalink
     sublinks:
@@ -84,13 +93,4 @@ links:
       - title: Parents Engagement
         url: /permalink
       - title: Subject Sharing 2022
-        url: /permalink
-  - title: Programmes
-    url: /permalink
-    sublinks:
-      - title: Learning for Life Programme
-        url: /permalink
-      - title: Global Classroom Programme
-        url: /permalink
-      - title: Events
         url: /permalink
