--- a/_programme/collection.yml
+++ b/_programme/collection.yml
@@ -2,5 +2,6 @@ collections:
   programme:
     output: true
     order:
+      - Learning for Life Programmes.md
       - Global Classroom Programme.md
       - Events.md
