--- a/_programme/collection.yml
+++ b/_programme/collection.yml
@@ -2,6 +2,7 @@ collections:
   programme:
     output: true
     order:
+      - 2019 Global Classroom/.keep
       - 2021 Global Classroom.md
       - Global Classroom Programme.md
       - Learning for Life Programmes.md
