--- a/_programme/collection.yml
+++ b/_programme/collection.yml
@@ -5,4 +5,5 @@ collections:
       - Learning for Life Programmes.md
       - Global Classroom Programme.md
       - 2021 Global Classroom.md
+      - 2019 Global Classroom/2019 Global Classroom.md
       - 2019 Global Classroom/.keep
