--- a/_programme/collection.yml
+++ b/_programme/collection.yml
@@ -5,5 +5,6 @@ collections:
       - Learning for Life Programmes.md
       - Global Classroom Programme.md
       - 2021 Global Classroom.md
+      - 2019 Global Classroom/P1 Math Trail 2019.md
       - 2019 Global Classroom/2019 Global Classroom.md
       - 2019 Global Classroom/.keep
