--- a/_programme/collection.yml
+++ b/_programme/collection.yml
@@ -5,6 +5,8 @@ collections:
       - Learning for Life Programmes.md
       - Global Classroom Programme.md
       - 2021 Global Classroom.md
+      - 2019 Global Classroom/P3 and 4 Exploration of Hip Hop, Classical Indian
+        and Contemporary Dance.md
       - 2019 Global Classroom/P4 Museum Based Learning Experience to National
         Gallery Singapore.md
       - 2019 Global Classroom/Introduction to Percussion Ensemble Music.md
