--- a/_programme/collection.yml
+++ b/_programme/collection.yml
@@ -5,6 +5,7 @@ collections:
       - Learning for Life Programmes.md
       - Global Classroom Programme.md
       - 2021 Global Classroom.md
+      - 2019 Global Classroom/2019 RVPS Language Carnival (P1 – P4).md
       - 2019 Global Classroom/Xiamen Culture Immersion Trip 2019.md
       - 2019 Global Classroom/DARE Programme for P4 and P5.md
       - 2019 Global Classroom/P3 and 4 Exploration of Hip Hop, Classical Indian
