--- a/_programme/collection.yml
+++ b/_programme/collection.yml
@@ -5,6 +5,7 @@ collections:
       - Learning for Life Programmes.md
       - Global Classroom Programme.md
       - 2021 Global Classroom.md
+      - 2019 Global Classroom/P4 Mathematics Hands On Activities 2019.md
       - 2019 Global Classroom/P2 SEP ‘Fun with Golf’ Programme.md
       - 2019 Global Classroom/English Literature Appreciation.md
       - 2019 Global Classroom/2019 RVPS Language Carnival (P1 – P4).md
