--- a/_programme/collection.yml
+++ b/_programme/collection.yml
@@ -21,4 +21,5 @@ collections:
       - 2019 Global Classroom/P4 Museum Based Learning Experience to National
         Gallery Singapore.md
       - 2019 Global Classroom/Introduction to Percussion Ensemble Music.md
+      - Events/2022.md
       - Events/.keep
