--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -49,7 +49,7 @@ links:
     url: /permalink
     sublinks:
       - title: Learning for Life Programme
-        url: /permalink
+        url: /about-us/Learning-for-Life-Programmes
       - title: Global Classroom Programme
         url: /permalink
       - title: Events
