--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -46,7 +46,7 @@ links:
       - title: Uniformed Groups
         url: /ccas/Uniformed-Groups/Red-Cross
   - title: PROGRAMME
-    url: /permalink
+    url: /about-us/Learning-for-Life-Programmes
     sublinks:
       - title: Learning for Life Programme
         url: /about-us/Learning-for-Life-Programmes
