--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -51,7 +51,7 @@ links:
       - title: Learning for Life Programme
         url: /about-us/Learning-for-Life-Programmes
       - title: Global Classroom Programme
-        url: /permalink
+        url: /programme/Global-Classroom-Programme
       - title: Events
         url: /permalink
   - title: STAKEHOLDERS
