--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -53,7 +53,7 @@ links:
       - title: Global Classroom Programme
         url: /programme/Global-Classroom-Programme
       - title: Events
-        url: /permalink
+        url: /programme/Events/2022
   - title: STAKEHOLDERS
     url: /permalink
     sublinks:
