--- a/_stakeholders/collection.yml
+++ b/_stakeholders/collection.yml
@@ -2,6 +2,7 @@ collections:
   stakeholders:
     output: true
     order:
+      - Teacher's Portal/.keep
       - Teachers' Portal.md
       - Our Alumni.md
       - Parents in Education.md
