--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -58,7 +58,7 @@ links:
     url: /permalink
     sublinks:
       - title: Teacher's Portal
-        url: /permalink
+        url: /stakeholders/Teachers-Portal
       - title: Our Alumni
         url: /permalink
       - title: Parents in Education
