--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -60,7 +60,7 @@ links:
       - title: Teacher's Portal
         url: /stakeholders/Teachers-Portal
       - title: Our Alumni
-        url: /permalink
+        url: /stakeholders/Our-Alumni
       - title: Parents in Education
         url: /permalink
       - title: Parent Support Group
