--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -62,7 +62,7 @@ links:
       - title: Our Alumni
         url: /stakeholders/Our-Alumni
       - title: Parents in Education
-        url: /permalink
+        url: /stakeholders/Parents-in-Education
       - title: Parent Support Group
         url: /permalink
       - title: Parent Volunteer Programme
