--- a/_communications/collection.yml
+++ b/_communications/collection.yml
@@ -2,6 +2,7 @@ collections:
   communications:
     output: true
     order:
+      - Primary One 2022 information.md
       - PSLE Scoring and Secondary 1 Posting from 2021.md
       - Consent for photography and videos.md
       - Parents Engagement.md
