--- a/_communications/collection.yml
+++ b/_communications/collection.yml
@@ -2,6 +2,7 @@ collections:
   communications:
     output: true
     order:
+      - Guide to SLS and Student iCON/.keep
       - Parents Gateway.md
       - Primary One 2022 information.md
       - PSLE Scoring and Secondary 1 Posting from 2021.md
