--- a/_communications/collection.yml
+++ b/_communications/collection.yml
@@ -2,6 +2,7 @@ collections:
   communications:
     output: true
     order:
+      - Guide to SLS and Student iCON/Singapore Student Learning Space (SLS).md
       - Guide to SLS and Student iCON/Student iCON.md
       - Guide to SLS and Student iCON/.keep
       - Parents Gateway.md
