--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -64,7 +64,7 @@ links:
       - title: Parents in Education
         url: /stakeholders/Parents-in-Education
       - title: Parent Support Group
-        url: /permalink
+        url: /stakeholders/Parent-Support-Group
       - title: Parent Volunteer Programme
         url: /permalink
   - title: COMMUNICATIONS
