--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -66,7 +66,7 @@ links:
       - title: Parent Support Group
         url: /stakeholders/Parent-Support-Group
       - title: Parent Volunteer Programme
-        url: /permalink
+        url: /stakeholders/Parent-Volunteers-Programme
   - title: COMMUNICATIONS
     url: /permalink
     sublinks:
