--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -68,10 +68,10 @@ links:
       - title: Parent Volunteer Programme
         url: /stakeholders/Parent-Volunteers-Programme
   - title: COMMUNICATIONS
-    url: /permalink
+    url: /communications/Rivervale-in-the-News
     sublinks:
       - title: Rivervale in the News
-        url: /permalink
+        url: /communications/Rivervale-in-the-News
       - title: Calendar
         url: /permalink
       - title: Rivervale Connects
