--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -73,7 +73,7 @@ links:
       - title: Rivervale in the News
         url: /communications/Rivervale-in-the-News
       - title: Calendar
-        url: /permalink
+        url: /communications/Calendar
       - title: Rivervale Connects
         url: /permalink
       - title: Guide to using SLS
