--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -75,7 +75,7 @@ links:
       - title: Calendar
         url: /communications/Calendar
       - title: Rivervale Connects
-        url: /permalink
+        url: /communications/Rivervale-Connects
       - title: Guide to using SLS
         url: /permalink
       - title: Guide to using Student ICON
