--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -77,7 +77,7 @@ links:
       - title: Rivervale Connects
         url: /communications/Rivervale-Connects
       - title: Guide to using SLS
-        url: /permalink
+        url: //communications/Guide-to-SLS-and-Student-iCON/Singapore-Student-Learning-Space-SLS
       - title: Guide to using Student ICON
         url: /permalink
       - title: Parents Gateway
