--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -79,7 +79,7 @@ links:
       - title: Guide to using SLS
         url: //communications/Guide-to-SLS-and-Student-iCON/Singapore-Student-Learning-Space-SLS
       - title: Guide to using Student ICON
-        url: /permalink
+        url: /communications/Guide-to-SLS-and-Student-iCON/Student-iCON
       - title: Parents Gateway
         url: /permalink
       - title: Primary One 2022 Information
