--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -81,7 +81,7 @@ links:
       - title: Guide to using Student ICON
         url: /communications/Guide-to-SLS-and-Student-iCON/Student-iCON
       - title: Parents Gateway
-        url: /permalink
+        url: /communications/Parents-Gateway
       - title: Primary One 2022 Information
         url: /permalink
       - title: PSLE Scoring from 2021
