--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -83,7 +83,7 @@ links:
       - title: Parents Gateway
         url: /communications/Parents-Gateway
       - title: Primary One 2022 Information
-        url: /permalink
+        url: /communications/Primary-One-2022-information
       - title: PSLE Scoring from 2021
         url: /permalink
       - title: Secondary 1 Posting from 2021
