--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -85,7 +85,7 @@ links:
       - title: Primary One 2022 Information
         url: /communications/Primary-One-2022-information
       - title: PSLE Scoring from 2021
-        url: /permalink
+        url: /communications/PSLE-Scoring-and-Secondary-1-Posting-from-2021
       - title: Secondary 1 Posting from 2021
         url: /permalink
       - title: Consent for Photography
