--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -89,7 +89,7 @@ links:
       - title: Secondary 1 Posting from 2021
         url: /permalink
       - title: Consent for Photography
-        url: /permalink
+        url: /communications/Consent-for-photography-and-videos
       - title: Parents Engagement
         url: /permalink
       - title: Subject Sharing 2022
