--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -91,6 +91,6 @@ links:
       - title: Consent for Photography
         url: /communications/Consent-for-photography-and-videos
       - title: Parents Engagement
-        url: /permalink
+        url: /communications/Parents-Engagement
       - title: Subject Sharing 2022
         url: /permalink
