--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -93,4 +93,4 @@ links:
       - title: Parents Engagement
         url: /communications/Parents-Engagement
       - title: Subject Sharing 2022
-        url: /permalink
+        url: /communications/Subject-Sharing
