--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Title
+title: Rivervale Primary School
 url: ""
 favicon: /images/School/photo6167760560079352290.jpg
 colors:
@@ -51,3 +51,8 @@ plugins:
   - jekyll-remote-theme
 staging: https://moe-rivervalepri-staging.netlify.app
 prod: https://moe-rivervalepri-prod.netlify.app
+shareicon: /images/isomer-logo.svg
+is_government: false
+facebook-pixel: ""
+google_analytics: ""
+linkedin-insights: ""
