--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 logo: /images/School/photo6160989144705250760.jpg
 links:
   - title: ABOUT US
-    url: /permalink
+    url: /Mission-Vision
     sublinks:
       - title: Mission & Vision
         url: /Mission-Vision
