--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -55,7 +55,7 @@ links:
       - title: Events
         url: /programme/Events/2022
   - title: STAKEHOLDERS
-    url: /permalink
+    url: /stakeholders/Teachers-Portal
     sublinks:
       - title: Teacher's Portal
         url: /stakeholders/Teachers-Portal
