--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,7 +12,7 @@ links:
       - title: Our Location
         url: /Our-Location
       - title: Our Service Providers
-        url: /permalink
+        url: /Our-Service-Providers
       - title: Our Staff
         url: /about-us/Our-Staff/School-Advisory-Committee
   - title: CURRICULUM DEPARTMENTS
