--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -87,7 +87,7 @@ links:
       - title: PSLE Scoring from 2021
         url: /communications/PSLE-Scoring-and-Secondary-1-Posting-from-2021
       - title: Secondary 1 Posting from 2021
-        url: /permalink
+        url: //communications/PSLE-Scoring-and-Secondary-1-Posting-from-2021
       - title: Consent for Photography
         url: /communications/Consent-for-photography-and-videos
       - title: Parents Engagement
