--- a/_config.yml
+++ b/_config.yml
@@ -49,8 +49,8 @@ plugins:
   - jekyll-paginate
   - jekyll-sitemap
   - jekyll-remote-theme
-staging: https://moe-rivervalepri-staging.netlify.app
-prod: https://moe-rivervalepri-prod.netlify.app
+staging: https://staging.d1avpjhet3x9vl.amplifyapp.com
+prod: https://master.d1avpjhet3x9vl.amplifyapp.com
 shareicon: /images/isomer-logo.svg
 is_government: false
 facebook-pixel: ""
