--- a/_communications/collection.yml
+++ b/_communications/collection.yml
@@ -2,6 +2,7 @@ collections:
   communications:
     output: true
     order:
+      - Staff Accolades.md
       - 2023 P1 Admin Briefing.md
       - Useful Links for students.md
       - Rivervale in the News.md
