--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,96 +1,8 @@
 logo: /images/School/photo6160989144705250760.jpg
 links:
-  - title: ABOUT US
-    url: /Mission-Vision
-    sublinks:
-      - title: Mission & Vision
-        url: /Mission-Vision
-      - title: School Song
-        url: /School-Song
-      - title: General Information
-        url: /General-Information
-      - title: Our Location
-        url: /Our-Location
-      - title: Our Service Providers
-        url: /Our-Service-Providers
-      - title: Our Staff
-        url: /about-us/Our-Staff/School-Advisory-Committee
-  - title: CURRICULUM DEPARTMENTS
-    url: /curriculum-departments/English
-    sublinks:
-      - title: English
-        url: /curriculum-departments/English
-      - title: Mathematics
-        url: /curriculum-departments/Mathematics/Mathematics
-      - title: Science
-        url: /curriculum-departments/Science/Science
-      - title: Mother Tongue
-        url: /curriculum-departments/Mother-Tongue/Chinese-Language
-      - title: ICT
-        url: /curriculum-departments/ICT/Information-Technology
-      - title: PE/CCA
-        url: /curriculum-departments/PE-and-CCA/PE-CCA
-      - title: Aesthetics
-        url: /curriculum-departments/Aesthetics/Aesthetics
-      - title: Student Development Team
-        url: /curriculum-departments/Student-Development-Team/Student-Development-Team
-  - title: CCA
-    url: /ccas/Sports/Badminton
-    sublinks:
-      - title: Sports
-        url: /ccas/Sports/Badminton
-      - title: Performing Arts
-        url: /ccas/Performing-Arts/Brass-Band
-      - title: Clubs
-        url: /ccas/Clubs/Art-Club
-      - title: Uniformed Groups
-        url: /ccas/Uniformed-Groups/Red-Cross
-  - title: PROGRAMME
-    url: /about-us/Learning-for-Life-Programmes
-    sublinks:
-      - title: Learning for Life Programme
-        url: /about-us/Learning-for-Life-Programmes
-      - title: Global Classroom Programme
-        url: /programme/Global-Classroom-Programme
-      - title: Events
-        url: /programme/Events/2022
-  - title: STAKEHOLDERS
-    url: /stakeholders/Teachers-Portal
-    sublinks:
-      - title: Teacher's Portal
-        url: /stakeholders/Teachers-Portal
-      - title: Our Alumni
-        url: /stakeholders/Our-Alumni
-      - title: Parents in Education
-        url: /stakeholders/Parents-in-Education
-      - title: Parent Support Group
-        url: /stakeholders/Parent-Support-Group
-      - title: Parent Volunteer Programme
-        url: /stakeholders/Parent-Volunteers-Programme
-  - title: COMMUNICATIONS
-    url: /communications/Rivervale-in-the-News
-    sublinks:
-      - title: Rivervale in the News
-        url: /communications/Rivervale-in-the-News
-      - title: Calendar
-        url: /communications/Calendar
-      - title: Rivervale Connects
-        url: /communications/Rivervale-Connects
-      - title: Guide to using SLS
-        url: //communications/Guide-to-SLS-and-Student-iCON/Singapore-Student-Learning-Space-SLS
-      - title: Guide to using Student ICON
-        url: /communications/Guide-to-SLS-and-Student-iCON/Student-iCON
-      - title: Parents Gateway
-        url: /communications/Parents-Gateway
-      - title: Primary One 2022 Information
-        url: /communications/Primary-One-2022-information
-      - title: PSLE Scoring from 2021
-        url: /communications/PSLE-Scoring-and-Secondary-1-Posting-from-2021
-      - title: Secondary 1 Posting from 2021
-        url: //communications/PSLE-Scoring-and-Secondary-1-Posting-from-2021
-      - title: Consent for Photography
-        url: /communications/Consent-for-photography-and-videos
-      - title: Parents Engagement
-        url: /communications/Parents-Engagement
-      - title: Subject Sharing 2022
-        url: /communications/Subject-Sharing
+  - title: About Us
+    collection: about-us
+  - title: CCAS
+    collection: ccas
+  - title: Menu Title
+    collection: about-us
