--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,5 +4,11 @@ links:
     collection: about-us
   - title: CCAS
     collection: ccas
-  - title: Menu Title
-    collection: about-us
+  - title: Departments
+    collection: departments
+  - title: Partnership
+    collection: partnerships
+  - title: Communications
+    collection: communications
+  - title: Programmes & Events
+    collection: programme-and-events
