--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -2,6 +2,7 @@ collections:
   departments:
     output: true
     order:
+      - Malay Language.md
       - Tamil Language.md
       - Physical Education (PE).md
       - Student Management.md
