--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -2,6 +2,7 @@ collections:
   departments:
     output: true
     order:
+      - Departments.md
       - Aesthetics (Art & Music).md
       - English.md
       - Character and Citizenship Education.md
