--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,6 +4,8 @@ links:
     collection: about-us
   - title: CCAS
     collection: ccas
+  - title: Departments
+    collection: departments
   - title: Partnership
     collection: partnerships
   - title: Communications
