--- a/_programme-and-events/collection.yml
+++ b/_programme-and-events/collection.yml
@@ -2,4 +2,5 @@ collections:
   programme-and-events:
     output: true
     order:
+      - Applied Learning Programme (ALP) @ Rivervale.md
       - Learning for Life Programmes.md
