--- a/_programme-and-events/collection.yml
+++ b/_programme-and-events/collection.yml
@@ -3,4 +3,4 @@ collections:
     output: true
     order:
       - Applied Learning Programme (ALP) @ Rivervale.md
-      - Learning for Life Programmes.md
+      - Learn for Life Programme (LLP) @ Rivervale.md
