--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -7,4 +7,4 @@ collections:
       - General Information.md
       - Our Location.md
       - Our Service Providers.md
-      - School Advisory Committee.md
+      - Our Staff.md
