--- a/_communications/collection.yml
+++ b/_communications/collection.yml
@@ -4,7 +4,7 @@ collections:
     order:
       - Useful Links for students.md
       - Rivervale in the News.md
-      - Calendar.md
+      - School Calendar.md
       - Rivervale Connects.md
       - Guide to using SLS & Student ICON.md
       - Parents Gateway.md
